--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -403,7 +403,6 @@ h1, h2, h3 {
   background-repeat: no-repeat;
   background-position-x: right;
   width: 100%;
-  height: 400px;
   margin-top: -200px;
   z-index: 12000;
 }
@@ -413,7 +412,7 @@ h1, h2, h3 {
   padding-right: 5%;
   margin-top: 2%;
   margin-bottom: 5%;
-  font-size: 14pt;
+  font-size: 18pt;
   font-family: 'corbel';
   
 }
@@ -422,6 +421,8 @@ h1, h2, h3 {
   width: 100%;
   text-align: center;
   font-family: 'corbel bold';
+  height: 500px;
+  padding-top: 100px;
   font-size: 5em;
   background-image: url('../img/bg/patternAbout.png');
 }
@@ -430,10 +431,10 @@ h1, h2, h3 {
   text-align: center;
   font-family: 'corbel bold';
   font-size: 5em;
-  background-image: url('../img/bg/patterContact.png');
   background-repeat: no-repeat;
-  background-position: center;
   height: 400px;
+  margin-top: 10%;
+  margin-bottom: 5%;
 }
 #about-title > h1{
   font-size: 3em;
@@ -446,7 +447,8 @@ h1, h2, h3 {
 .form-style-6{
 	font: 95% Arial, Helvetica, sans-serif;
 	width: 100%;
-	margin: 10px 15%;
+  margin: 10px 15%;
+  margin-bottom: 10%;
 	padding: 16px;
 	background: #343A40;
 }
@@ -505,7 +507,7 @@ h1, h2, h3 {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
   width: 50%;
-  margin-left: 20%;
+  margin-left: 25%;
 	padding: 3%;
 	background: #43D1AF;
 	border-bottom: 2px solid #30C29E;
@@ -529,7 +531,7 @@ h1, h2, h3 {
 
 #supportFooter{
   width: 20%;
-  text-align: justify;
+  text-align: right;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px)
