--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -534,6 +534,30 @@ h1, h2, h3 {
   text-align: right;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background: linear-gradient(124deg,#B978C2, #8E7DD0, #00A5E2, 
+  #1AC8D8, #43C8B9, #BEE485);
+  background-size: 1800% 1800%;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  animation: rainbowBtn 18s ease infinite;
+}
+@keyframes rainbowBtn { 
+  0%{background-position:0% 82%}
+  50%{background-position:100% 19%}
+  100%{background-position:0% 82%}
+}
+
 @media screen and (min-width: 768px) and (max-width: 1024px)
 {
   .foot-section > a{
@@ -719,27 +743,6 @@ h1, h2, h3 {
   {
     display: none;
   }
-
-  .footer
-  {
-    position: fixed;
-    margin-top: 5%;
-    width: 100%;
-    height: 25%;
-    background-color: #424242;
-    color: #FFF;
-  }
-  .foot-section
-  {
-    position: relative;
-    width: 100%;
-    text-align: center;
-  }
-
-  .foot-section > a{
-    font-size: 7pt
-  }
-
   .thumb-wrapper
   {
     position: relative;
@@ -935,25 +938,6 @@ h1, h2, h3 {
     font-size: 12pt;
     width: 100px;
     height: 100px;
-  }
-  .footer
-  {
-    position: fixed;
-    margin-top: 30%;
-    width: 100%;
-    height: 25%;
-    bottom: 0%;
-    background-color: #424242;
-    color: #FFF;
-  }
-  .foot-section
-  {
-    position: relative;
-    width: 100%;
-    text-align: center;
-  }
-  .foot-section > a{
-    font-size: 7pt
   }
   .thumb-wrapper
   {
