--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -83,7 +83,7 @@ h1, h2, h3 {
 
 .contenido-dashboard{
   position: relative;
- margin: 75px 0px 0px 0px;
+ margin: 0px 0px 0px 0px;
  padding: 0px;
  width: 100%;
  height: 700px;
@@ -553,6 +553,23 @@ h1, h2, h3 {
   0%{background-position:0% 82%}
   50%{background-position:100% 19%}
   100%{background-position:0% 82%}
+}
+
+.line{
+  display: block;
+  float: right;
+}
+
+.white{
+  color: #FFF !important;
+}
+
+.hidden{
+  visibility: hidden;
+}
+
+#menu{
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px)
