--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -609,20 +609,27 @@ h1, h2, h3 {
   text-align: center;
 }
 
+.videogame-body{
+  position: relative;
+  width: 100%;
+  height: 600px;
+  padding-top: 5%;
+}
+
 .swiper-container {
   width: 100%;
-  height: 100%;
+  height: 400px;
+  width: 60%;
 }
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
-
+  background: #343A40;
   /* Center slide text vertically */
-  display: -webkit-box;
+  /*display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+  display: -webkit-flex;*/
+  padding-top: 10%;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
