--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -159,15 +159,14 @@ h1, h2, h3 {
 {
   position: relative;;
   width: 100%;
-  height: 50%;
   margin-top:0px;
   overflow-x: hidden;
-  background-color: #343a40;
+  background: linear-gradient(to right, red, orange);
 }
 #video video
 {
   min-width: 100%;
-  min-height: 30%;
+  min-height: 20%;
 }
 #video-teaser
 {
@@ -446,7 +445,7 @@ h1, h2, h3 {
   padding-right: 5%;
   margin-top: 2%;
   margin-bottom: 5%;
-  font-size: 18pt;
+  font-size: 14pt;
   font-family: 'corbel';
   
 }
@@ -455,20 +454,21 @@ h1, h2, h3 {
   width: 100%;
   text-align: center;
   font-family: 'corbel bold';
-  height: 500px;
-  padding-top: 100px;
-  font-size: 5em;
+  height: 200px;
+  padding-top: 50px;
+  font-size: 18pt;
   background-image: url('../img/bg/patternAbout.png');
 }
 #contact-title{
   width: 100%;
   text-align: center;
   font-family: 'corbel bold';
-  font-size: 5em;
+  font-size: 18pt;
   background-repeat: no-repeat;
-  height: 400px;
-  margin-top: 10%;
+  height: 200px;
+  margin-top: 2%;
   margin-bottom: 5%;
+  background-color: #343A40;    
 }
 #about-title > h1{
   font-size: 3em;
@@ -476,6 +476,9 @@ h1, h2, h3 {
 #contact-title > h1{
   font-size: 3em;  
   margin-top: 60px;
+  background: linear-gradient(90deg,#ff8a00,#e52e71);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .form-style-6{
@@ -543,8 +546,9 @@ h1, h2, h3 {
   width: 50%;
   margin-left: 25%;
 	padding: 3%;
-	background: #43D1AF;
-	border-bottom: 2px solid #30C29E;
+	background-color: #FFE53B;
+  background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+	border-bottom: 1px solid #FFE53B;
 	border-top-style: none;
 	border-right-style: none;
 	border-left-style: none;	
@@ -552,7 +556,7 @@ h1, h2, h3 {
 }
 .form-style-6 input[type="submit"]:hover,
 .form-style-6 input[type="button"]:hover{
-	background: #2EBC99;
+	background-color: #FFE53B;
 }
 
 
@@ -639,7 +643,92 @@ h1, h2, h3 {
   align-items: center;
 }
 
+.three-col-container{
+  position: relative;
+  width: 100%;
+  display: inline-flex;
+  border-width: 3px;
+  border-style: solid;
+  border-image: 
+  linear-gradient(
+    to bottom, 
+    red, 
+    rgba(0, 0, 0, 0)
+  ) 1 100%;
+}
 
+.column{
+  position: relative;
+  width: 30%;  
+  margin-left: 2%;
+  margin-right: 1%;
+  word-wrap: break-word;  
+}
+
+.column > h1 {
+  font-size: 18pt !important;
+  text-align: center;
+}
+
+.column > p {
+  font-size: 14pt !important;
+  text-align: justify;
+}
+
+.circle-container{
+  position: relative;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.circle{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin:auto;
+  background-color: #FFF;
+  text-align: center;
+  border-radius: 50%;
+  padding-top: 7px;
+}
+
+.primary-color{
+  color: #343A40 !important;
+}
+
+.two-col-container{
+  position: relative;
+  width: 100%;
+  display: inline-flex;
+  margin-bottom: 10%;
+}
+
+.column-three{
+  position: relative;
+  width: 40%;
+  background-color: #FFF;
+  top: -100px;
+}
+
+.column-three > p{
+  padding-right: 3%;  
+  padding-left: 5%;
+}
+.column-six{
+  position: relative;
+  width: 60%;
+}
+.linear-gradient{
+  position: relative;
+  width: 100%;
+  padding-bottom: 0.5px;
+  background: linear-gradient(to right, red, purple);
+}
+.linear-gradient > h1{
+  background-color: #007EA7;
+  text-align: center;
+  color: #FFF;
+}
 
 @media screen and (min-width: 768px) and (max-width: 1024px)
 {
