--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -263,6 +263,20 @@ h1, h2, h3 {
   display: inline-block;
   margin-bottom: 2%;  
 }
+
+.footer-sigin
+{
+  position: relative;
+  width: 100%;
+  height: 20%;
+  bottom: -55px;
+  background-color: #343a40;
+  color: #FFF;
+  display: inline-block;
+  margin-bottom: 2%;  
+}
+
+
 .foot-section
 {
   position: relative;   
