--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -854,6 +854,12 @@ h1, h2, h3 {
   }
 }
 
+video {
+  width: 100%;
+  height: 730px;
+  object-fit: cover;
+}
+
 @media screen and (min-width: 450px) and (max-width: 768px)
 {
   body
