--- a/css/master.css
+++ b/css/master.css
@@ -246,6 +246,49 @@ p {
   }
 }
 
+.level-selector{
+  position: relative;
+  width: 50%;
+  margin: auto;
+  background-color: #343A40;
+  text-align: center;
+}
+
+.level-level{
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-image: url('../img/videogames/levellevel.png');
+  background-size: 100% 100%;
+  padding: 5%;
+}
+.level-number{
+  font-size: 24pt;
+  font-weight: bold;
+  color: #FFF;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  padding-top: 5%;
+  background-image: url('../img/videogames/round.png');
+  background-size: 100% 100%;
+}
+.level-number-lock{
+  width: 100px;
+  height: 100px;
+  margin: auto;  
+  background-image: url('../img/videogames/lock.png');
+  background-size: 100% 100%;
+}
+.level-number:hover{
+  cursor: pointer;
+}
+.level-table{
+  position: relative;
+  width: 100%;  
+  text-align: center;
+}
+
 @media screen and (min-width: 320px) and (max-width: 540px)
 {
 
