--- a/css/master.css
+++ b/css/master.css
@@ -311,7 +311,8 @@ p {
   background-size: 100% 100%;
 }
 #play:hover{
-  background-image: url('../img/videogames/play_hover.png');  
+  background-image: url('../img/videogames/play_hover.png'); 
+  cursor: pointer; 
 }
 #leaderboard{
   position: relative;
@@ -324,6 +325,7 @@ p {
 }
 #leaderboard:hover{
   background-image: url('../img/videogames/records_hover.png'); 
+  cursor: pointer;
 }
 @media screen and (min-width: 320px) and (max-width: 540px)
 {
