--- a/css/gamescss/main.css
+++ b/css/gamescss/main.css
@@ -20,14 +20,14 @@ color: white;
 font-family: 'Poppins', sans-serif;
 }
 #speachBox{
-position: absolute;
+position: fixed;
+bottom: 0;
 border-style: solid;
 border-width: 5px;
 border-color: white;        
-width: 30%;
+width: 80%;
+margin-left: 10%;
 height: 12%;
-margin-top: 70vh;
-margin-left: 35vw;
 text-align: center;
 visibility: hidden;
 }
@@ -118,7 +118,7 @@ position: relative;
 display: inline-block;
 text-align: left;
 width: 10%;
-font-size: 2em;
+font-size: 1.5em;
 color: #ffffff;
 } 
 #scoreControl{
