--- a/css/master.css
+++ b/css/master.css
@@ -339,6 +339,16 @@ iframe{
   height: 100%;
   overflow-y: hidden;
 }
+
+@media screen and (min-width: 1600px){
+  .super-game-container{
+    position: relative;
+    width: 80%;
+    height: 700px;
+    margin: auto;
+    background-color: #343A40;;
+  } 
+}
 @media screen and (min-width: 320px) and (max-width: 540px)
 {
 
