--- a/css/gamescss/main.css
+++ b/css/gamescss/main.css
@@ -108,24 +108,25 @@ font-size: 2em;
 position: relative;        
 display: inline-block;
 text-align: center;
-width: 55%;        
+width: 30%;        
 color: #ffffff;
 font-family: 'Poppins', sans-serif;
 font-size: 2em;
 } 
 #livesControl{
 position: relative;        
-display: inline-block;
-text-align: left;
-width: 10%;
+/*display: inline-block;*/
+text-align: right;
+width: 15%;
 font-size: 1.5em;
 color: #ffffff;
+float: left;
 } 
 #scoreControl{
 position: relative;        
 display: inline-block;
 text-align: right;
-width: 10%;
+width: 20%;
 font-size: 2em;
 color: #ffffff;
 font-family: 'Poppins', sans-serif;
