--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -15,6 +15,17 @@ body
   background-color: #343A40;
 }
 
+.videogame-section-body{
+  background: rgba(0, 0, 0, 1) !important;
+}
+
+.videogame-section-container{
+  position: absolute;
+  height: 100%;
+  z-index: 100002;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
 .bg-black{
   background-color: #343A40;
 }
@@ -641,7 +652,7 @@ h1, h2, h3 {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #343A40;
+  background-color: rgba(0, 0, 0, 0.01) !important;
   /* Center slide text vertically */
   /*display: -webkit-box;
   display: -ms-flexbox;
