--- a/css/master.css
+++ b/css/master.css
@@ -250,17 +250,19 @@ p {
   position: relative;
   width: 50%;
   margin: auto;
-  background-color: #343A40;
+  margin-top: 5%;
+  background-color: rgba(0, 0, 0, 0);
   text-align: center;
 }
 
 .level-level{
   position: relative;
   width: 100%;
-  height: 300px;
-  background-image: url('../img/videogames/levellevel.png');
+  height: 300px;  
   background-size: 100% 100%;
   padding: 5%;
+  border-radius: 5px;
+  border: 1px solid #35A6FF;  
 }
 .level-number{
   font-size: 42pt;
