--- a/css/gamescss/main.css
+++ b/css/gamescss/main.css
@@ -298,3 +298,8 @@ height: 50px;
   }
 }
 
+#smokeScreen{
+  width: 100%; 
+  height:100%; 
+  background: radial-gradient(circle, rgba(165,253,29,1) 0%, rgba(9,177,73,1) 57%);
+}
