--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -37,7 +37,11 @@ body
   font-family: 'PressStart';
   font-size: 32pt;
 }
-
+.press-start-speech{
+  font-family: 'PressStart';
+  font-size: 32pt;
+  color: #009688 !important;
+}
 .videogame-section-body{
   background: rgba(0, 0, 0, 1) !important;
 }
@@ -53,6 +57,15 @@ body
   height: 969px;
   z-index: 100002;
   background-color: rgba(255, 255, 255, 0.2) !important;  
+}
+.speech-section-container{
+  position: absolute;
+  height: 600px;
+  z-index: 100002;
+  background-color: rgba(255, 255, 255, 0.2) !important;  
+}
+#speech-background{
+  background-image: url('../img/bg/backgroundColorGrass.png');  
 }
 .bg-black{
   background-color: #343A40;
