--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -302,6 +302,7 @@ h1, h2, h3 {
   width: 100px;
   height: 100px;
 }
+
 .footer
 {
   position: relative;
@@ -841,114 +842,21 @@ h1, h2, h3 {
   color: #FFF;
 }
 
-@media screen and (min-width: 300px) and (max-width: 800px)
-{
-  .three-col-container{
-    position: relative;
-    width: 100%;
-    display: block;
-    border-width: 3px;
-    border-style: solid;
-    border-image: 
-    linear-gradient(
-      to bottom, 
-      red, 
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
-  }
-  .column{
-    position: relative;
-    width: 80%;  
-    margin-left: 10%;
-    margin-right: 1%;
-    word-wrap: break-word;  
-  }
+.error-register-wrapper{
+  position: relative;
+  background-color: #FFF;
+  width: 80%;
+  height: 400px;
+  margin: auto;
+  text-align: center;
+  padding-top: 5%;
+}
 
-  .about-title{
-    height: 100px;
-  }
-
-  .two-col-container{
-    position: relative;
-    width: 100%;
-    margin-bottom: 10%;
-    display: inline;
-  }
-
-  .column-three{
-    position: relative;
-    width: 100%;
-    background-color: #FFF;
-    top: -50px;
-  }
-
-  .column-six{
-    position: relative;
-    width: 100%;
-  }
-
-  .foot-section > a{
-    font-size: 7pt;
-  }
-  .img-dotted-left
-  {
-    display: none;
-  }
-  .img-dotted-right
-  {
-    display: none;
-  }
-  .contenido-singin
-  {
-    position: relative;
-    width: 100%;
-    height: 500px;
-  }
-
-  .game-preview-container
-  {
-    position: relative;
-    width: 100%;
-    margin: 0px;
-    margin-bottom: 10%;
-    padding: 5%;
-    float: none;
-  }
-  .game-preview-video video
-  {
-    position: relative;
-    width: 80%;
-    border-radius: 5px;
-  }
-  .game-preview-msg
-  {
-    position: relative;;
-    width: 50%;
-    top:45%;
-    left: 25%;
-    margin: 0px;
-    padding: 0px;
-  }
-  .userProgress
-  {
-    position: relative;
-    width: 80%;
-    margin: auto;
-  }
-
-  .form-wrapper {
-    background-color: #FFF;
-    width: 60%;
-    margin: auto;
-    padding: 2%;
-    box-shadow: 0 1px 2px rgba(0,0,0,.1);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  }
-
-  #login_form {
-    position: relative;
-    width: 100%;
-  }
+.error-register-text{
+  position: relative;
+  text-align: center;
+  font-family: Play;
+  font-size: 18pt;
 }
 
 video {
@@ -957,7 +865,38 @@ video {
   object-fit: cover;
 }
 
-@media screen and (min-width: 450px) and (max-width: 768px)
+
+/*///////////////////// LAPTOPS ///////////////////////*/
+@media screen and (min-width: 1600px) and (max-width: 2400px)
+{
+
+}
+
+
+/*///////////////////// SMALL LAPTOPS ///////////////////////*/
+@media screen and (min-width: 800px) and (max-width: 1300px)
+{
+  .error-register-wrapper{
+    position: relative;
+    background-color: #FFF;
+    width: 100%;
+    height: 400px;
+    margin: auto;
+    text-align: center;
+    padding-top: 5%;
+  }
+  
+  .error-register-text{
+    position: relative;
+    text-align: center;
+    font-family: Play;
+    font-size: 14pt;
+  }
+}
+
+
+/*///////////////////////////////////// TABLET //////////////////////////*/
+@media screen and (min-width: 450px) and (max-width: 800px)
 {
   body
   {
@@ -1160,8 +1099,113 @@ video {
     width: 100%;
     text-align: center;
   }
-}
 
+  .error-register-wrapper{
+    position: relative;
+    background-color: #FFF;
+    width: 80%;
+    height: 400px;
+    margin: auto;
+    text-align: center;
+    padding-top: 5%;
+  }
+  
+  .error-register-text{
+    position: relative;
+    text-align: center;
+    font-family: Play;
+    font-size: 18pt;
+  }
+
+  video {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .two-col-container{
+    position: relative;
+    width: 100%;
+    display: block;
+    margin-bottom: 10%;
+  }  
+  .column-three{
+    position: relative;
+    width: 100%;
+    background-color: #FFF;
+    top: 0px;
+  }
+
+  .column-six{
+    position: relative;
+    width: 100%;
+  }
+
+  .three-col-container{
+    position: relative;
+    width: 100%;
+    display: block;
+    border-width: 3px;
+    border-style: solid;
+    border-image: 
+    linear-gradient(
+      to bottom, 
+      red, 
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+  }
+
+  .column{
+    position: relative;
+    width: 90%;  
+    margin-left: 2%;
+    margin-right: 1%;
+    word-wrap: break-word;  
+  }
+
+  .footer
+  {
+    position: relative;
+    width: 100%;
+    height: 100%;  
+    background-color: #000;
+    color: #FFF;
+    display: inline-block;
+    padding-bottom: 5%;
+    margin-bottom: 2%;  
+  }
+
+  #supportFooter{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 11%;
+    margin-top: 5%;
+  }
+
+  #contactoFooter{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 11%;
+    margin-top: 5%;
+  }
+
+  #logoAndSocial{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 5%;
+    margin-top: 5%;
+  }
+
+  #userExtra {
+    position: relative;
+    width: 45%;
+    margin: auto;
+  }
+}
+ /*///////////////////////////////////// MOBILE //////////////////////////*/
 @media screen and (min-width: 320px) and (max-width: 450px)
 {
   body
@@ -1355,4 +1399,133 @@ video {
     width: 100%;
     text-align: center;
   }
+
+  .error-register-wrapper{
+    position: relative;
+    background-color: #FFF;
+    width: 100%;
+    height: 400px;
+    margin: auto;
+    text-align: justify;
+    padding-top: 2%;
+  }
+  
+  .error-register-text{
+    position: relative;    
+    text-align: justify;
+    font-family: Play;
+    padding: 5px;
+    font-size: 14pt;
+  }
+
+  video {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .two-col-container{
+    position: relative;
+    width: 100%;
+    display: block;
+    margin-bottom: 10%;
+  }  
+  .column-three{
+    position: relative;
+    width: 100%;
+    background-color: #FFF;
+    top: 0px;
+  }
+
+  .column-six{
+    position: relative;
+    width: 100%;
+  }
+
+  .three-col-container{
+    position: relative;
+    width: 100%;
+    display: block;
+    border-width: 3px;
+    border-style: solid;
+    border-image: 
+    linear-gradient(
+      to bottom, 
+      red, 
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+  }
+
+  .column{
+    position: relative;
+    width: 90%;  
+    margin-left: 2%;
+    margin-right: 1%;
+    word-wrap: break-word;  
+  }
+
+  .footer
+  {
+    position: relative;
+    width: 100%;
+    height: 100%;  
+    background-color: #000;
+    color: #FFF;
+    display: inline-block;
+    padding-bottom: 5%;
+    margin-bottom: 2%;  
+  }
+
+  #supportFooter{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 15%;
+    margin-top: 5%;
+  }
+
+  #contactoFooter{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 15%;
+    margin-top: 5%;
+  }
+
+  #logoAndSocial{
+    width: 100%;
+    text-align: justify;
+    font-family: 'Play';    
+    margin-left: 5%;
+    margin-top: 5%;
+  }
+
+  .text-about{
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-top: 5%;
+  }
+
+  .container-fluid{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+  }
+
+  .form-style-6 input[type="submit"],
+.form-style-6 button{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+  width: 50%;
+  padding: 1%;
+  margin:auto;	
+  font-size: 18pt;
+  background-color: #FFE53B;
+  border-radius: 50px;
+  background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);	
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;	
+	color: #fff;
+}
 }
