--- a/css/gamescss/main.css
+++ b/css/gamescss/main.css
@@ -164,8 +164,15 @@ animation-iteration-count: infinite;
 cursor: pointer;
 }
 .gameo-ico{
-color: #707070;
-font-size: 2em;
+  background: linear-gradient(180deg,#007AC5 0%, #9ACFF0 100%);;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2em;
+}
+#levelClearScore{
+  background: #707070;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 #pauseModalCenterTitle{
 animation: rainbow 3.5s linear;
@@ -245,16 +252,18 @@ height: 50px;
   height: 50px;
   text-align: center;
 }
-/*.canvas{
-  position: absolute;
-  width: 100%;
-  height: 90%;
-  margin: 2%;
-  margin-right: auto;
-  margin-top: 2%;
-  background-color:#fff;
-  
-}*/
+#level-clear-userName{
+  position: relative;
+  float: left;
+  width: 50%;
+  text-align: center;
+  font-size: 16pt;
+}
+#level-clear-userGems{
+  position: relative;
+  float: right;
+  width: 50%;
+}
 #canvas{
   position: relative;
   width: 100%;  
@@ -293,6 +302,11 @@ height: 50px;
   -webkit-text-fill-color: transparent;
 }
 
+.fa-star{
+  background: linear-gradient(180deg,rgba(255,89,0,1) 0%, rgba(255,241,30,1) 100%);;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 /*/////////////////EXPLOSIONS////////////////////////*/
 
 .explosion {
