UI change: Marign correction on index

--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -830,6 +830,7 @@ h1, h2, h3 {
 .column-six{
   position: relative;
   width: 60%;
+  margin-left: 2%;
 }
 .linear-gradient{
   position: relative;
