--- a/css/master.css
+++ b/css/master.css
@@ -270,6 +270,15 @@ p {
   text-align: center;
 }
 
+.speech-level-box{
+  position: relative;
+  width: 100%;
+  height: 300px;  
+  padding: 5%;
+  border-radius: 5px;
+  border: 1px solid #FFF; 
+}
+
 .level-level{
   position: relative;
   width: 100%;
