--- a/css/master.css
+++ b/css/master.css
@@ -286,7 +286,7 @@ p {
   background-size: 100% 100%;
   padding: 5%;
   border-radius: 5px;
-  border: 1px solid #35A6FF;  
+  border: 1px solid #FFF;  
 }
 .level-number{
   font-size: 42pt;
