--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -785,7 +785,9 @@ h1, h2, h3 {
 .white{
   color: #FFF !important;
 }
-
+.glow{
+  text-shadow: 0px 5px 30px #FFF, 0 0 30px #ff4da6;
+}
 .hidden{
   visibility: hidden;
 }
