--- a/css/gamescss/main.css
+++ b/css/gamescss/main.css
@@ -368,5 +368,7 @@ height: 50px;
 #smokeScreen{
   width: 100%; 
   height:100%; 
-  background: radial-gradient(circle, rgba(165,253,29,1) 0%, rgba(9,177,73,1) 57%);
+  background: rgb(6,6,6);
+  background: linear-gradient(360deg, rgba(6,6,6,1) 0%, rgba(240,32,80,1) 100%);
+  
 }
