--- a/css/master.css
+++ b/css/master.css
@@ -31,7 +31,7 @@ p {
   padding: 2%;
   width: 100%;
   text-align: center;
-  font-family: 'Play';
+  font-family: 'corbel';
 }
 
 #regLogin
@@ -41,7 +41,7 @@ p {
   width: 100%;
   margin-bottom: 2%;
   text-align: center;
-  font-family: 'Play';
+  font-family: 'corbel';
 }
 
 /*******DASHBOARD********/
