--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -59,7 +59,7 @@ body
   position: absolute;
   height: 100%;
   z-index: 100002;
-  background-color: rgba(0, 0, 0, 0.3) !important;
+  background-color: rgba(0, 0, 0, 0.5) !important;
 }
 .leaderboard-section-container{
   position: relative;
@@ -793,7 +793,7 @@ h1, h2, h3 {
   color: #FFF !important;
 }
 .glow{
-  text-shadow: 0px 5px 30px #FFF, 0 0 30px #ff4da6;
+  text-shadow: 0px 5px 30px #000, 0 0 10px #000;
 }
 .hidden{
   visibility: hidden;
