--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -241,6 +241,18 @@ h1, h2, h3 {
   max-width: 100%;
   max-height: 50%;
 }
+#contact-section{
+  position: relative;
+  width: 100%;  
+}
+#contacto-background{
+  position: absolute;
+  width: 100%;  
+  height: 300px;
+  bottom: 0px;
+  background-image: url('../img/bg/bg-contact.png');
+  background-size: cover;  
+}
 .footer
 {
   position: relative;
@@ -611,6 +623,7 @@ video {
   background-color: #FFF;
   margin-bottom: 5%;
   padding: 1%;  
+  z-index: 1002;
   -webkit-box-shadow: 0px 3px 15px -1px rgba(0,0,0,1);
   -moz-box-shadow: 0px 3px 15px -1px rgba(0,0,0,1);
   box-shadow: 0px 3px 15px -1px rgba(0,0,0,1);
@@ -619,6 +632,7 @@ video {
   position: relative;
   width: 80%;
   margin: auto;
+  color: #343A40;
 }
 .border-animation{
   background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
@@ -944,6 +958,7 @@ video {
   }
   #contact-title{
     height: fit-content;
+    margin-bottom: 10%;
   }
   #contact-title > h1 {
     font-size: 1.5em;
@@ -959,6 +974,12 @@ video {
     padding-left: 5%;
     padding-right: 5%;
     flex-direction: column;
+  }
+  #login{
+    display: none;
+  }
+  .img_logo{
+    margin: auto;
   }
   .contenido-singin
   {
@@ -1119,5 +1140,8 @@ video {
   }
   #contact-button{
     width: 100%;
+  }
+  #contacto-background{
+    display: none;
   }
 }
