--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -802,6 +802,63 @@ video {
 .arrow-step > h1 {
   text-align: center;
 }
+.leaderboard-section-container{
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+.leaderboard-container{
+  position: relative;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+.leaderboard-level-container{
+  position: relative;
+  border: 2px solid;
+  border-image-source: linear-gradient(45deg, rgb(5,164,225), rgb(141,124,207));
+  border-image-slice: 1;
+  height: 200px;
+  padding-top: 50px;
+  flex-grow: 1;
+  text-align: center;
+  margin: 5px;
+  transform: skew(-45deg);
+}
+.leaderboard-level-container:hover{
+  cursor: pointer;
+}
+.leaderboard-level-item{
+  position: relative;  
+  transform: skew(45deg);
+}
+.tierboard-container{
+  position: relative;
+  width: 100%;
+  background-color: green;
+}
+.tier{
+  position: relative;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  height: 150px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+.tier-head{
+  position: relative;
+  width: 20%;
+  background-color: blue;
+  border-radius: 5% 0% 0% 5%;
+}
+.tier-body{
+  position: relative;
+  width: 80%;
+  background-color: black;
+  border-radius: 5%;
+}
 /*///////////////////// SMALL LAPTOPS ///////////////////////*/
 @media screen and (min-width: 800px) and (max-width: 1300px)
 {
