--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -836,7 +836,6 @@ video {
 .tierboard-container{
   position: relative;
   width: 100%;
-  background-color: green;
 }
 .tier{
   position: relative;
@@ -851,13 +850,42 @@ video {
   position: relative;
   width: 20%;
   background-color: blue;
-  border-radius: 5% 0% 0% 5%;
+  padding-top: 25px;
+  border-radius: 25px 0% 0% 25px;
 }
 .tier-body{
   position: relative;
   width: 80%;
   background-color: black;
-  border-radius: 5%;
+  border-radius: 0% 25px 25px 0%;
+  display: flex;
+}
+.leaderboard-item{
+  position: relative;
+  width: 128px;
+  padding-top: 20px;
+}
+.item-picture{
+  position: relative;
+}
+.item-picture > img{
+  width: 80px;
+}
+.item-name{
+  position: relative;
+  font-size: 14pt;
+}
+.gradient-blue{
+  background: linear-gradient(90deg, rgba(2,220,242,1) 0%, rgba(0,142,255,1) 100%);
+}
+.gradient-green{
+  background: linear-gradient(90deg, rgba(2,242,94,1) 0%, rgba(6,142,46,1) 100%);
+}
+.gradient-yellow{
+  background: linear-gradient(90deg, rgba(224,242,2,1) 0%, rgba(250,126,9,1) 100%);
+}
+.gradient-orange{
+  background: linear-gradient(90deg, rgba(252,101,7,1) 0%, rgba(250,9,9,1) 100%);
 }
 /*///////////////////// SMALL LAPTOPS ///////////////////////*/
 @media screen and (min-width: 800px) and (max-width: 1300px)
