--- a/css/master.css
+++ b/css/master.css
@@ -18,6 +18,12 @@ a:hover{
   text-decoration: none;
   color: #FFF;
 }
+h1{
+  font-family: 'Jura';
+}
+p, span, strong, a {
+  font-family: 'Play';
+}
 .container-fluid-dashboard{
  position: relative;
  width: 80%; 
@@ -94,16 +100,30 @@ a:hover{
 #dash-menu{
   position: relative;
   width: 100%;
-  display: flex;
-  background-color: blueviolet;
+  display: flex;  
 }
 .menu-item-hex{
   position: relative;
   flex-grow: 1;
-  background-color: aqua;
+  height: 300px;   
   background-image: url("../img/dashboard-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   justify-content: center;
   text-align: center;
+  padding-top: 100px;
+}
+.dash-ico{
+  color: #FFF;
+  font-size: 3em;
+  transition: all 0.25s ease-out;
+}
+.dash-ico:hover{
+  /*animation: glow 0.5s linear;*/
+  font-size: 4em;
+  animation-iteration-count: 1;
+  text-shadow: 0 0 25px rgba(255,255,255,1);
 }
 .contenido
 {
