--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -248,7 +248,13 @@ text-decoration: none;
   position: absolute;
   height: 100%;
   z-index: 100002;
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  float: right;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+}
+.container-fluid-videogames{
+  position: absolute;
+  width: 80%;
+  margin-left: 20%;
 }
 .thesethose-section-container{
   position: absolute;
