--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -214,6 +214,9 @@ form {
 .img_logo{
   margin-left: 5%;
 }
+.img_logo:hover{
+  cursor: pointer;
+}
 #signin-link{
   position: relative;
   color: #FFF;
